# welding_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
alpaka_demo/: CMakeLists.txt  package.xml
alpaka_demo/include/bag/: calibration_data.bag
alpaka_demo/include/config/: laser_filters.yaml
alpaka_demo/include/headers/: calibrationClass.h
alpaka_demo/include/models/calibration_plate/: model.config  model.sdf
alpaka_demo/include/models/calibration_plate/meshes/: calibration_plate.dae  calibration_plate.stl
alpaka_demo/include/models/vulcram/: model.config  model.sdf
alpaka_demo/include/models/vulcram/meshes/: vulcram.dae  vulcram.stl
alpaka_demo/include/urdf/: laser_scanner.xacro  line_scanner.xacro  ur10e_alpaka.xacro  ur5e_laser.xacro
alpaka_demo/include/world/: calibration.world  welding.world
alpaka_demo/launch/: laser_assembler.launch  laser_filter.launch  laser_test.launch  seam_follow.launch
alpaka_demo/src/: alpaka_pose_test.py  bremmer_pose.py  calib_laser_v2B.py  calibration.cpp  calibrationClass.cpp  clean_plane_matching.py  clean_sphere_matching.py  laser_calibration.py  laser_scan_viz.py  marker_publish.py  move_robot.py  plane_matching.py  plane_segmentation.py  posePlan_moveIt.cpp  pose_transform_corke.py  real_robot_test.py  real_ur_control.py  reverse_engineer_sensor_pose.py  rotation_test.cpp  scan_pose.py  scan_test.py  servo_test.py  sphere_matching.py  transformCalculation.py  weld_seam_tracker.py
alpaka_demo/src/calibration_data/: matrix1.npy  matrix10.npy  matrix2.npy  matrix3.npy  matrix4.npy  matrix5.npy  matrix6.npy  matrix7.npy  matrix8.npy  matrix9.npy  scan1.npy  scan10.npy  scan2.npy  scan3.npy  scan4.npy  scan5.npy  scan6.npy  scan7.npy  scan8.npy  scan9.npy
alpaka_demo/src/test/: pose_transformation_test.py
alpaka_demo/srv/: ProcessBag.srv  SeamDetection.srv
include/urdf/: line_scanner.xacro  ur5e_laser.xacro
launch/inc/: load_ur.launch.xml
ur10e_alpaka/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_alpaka/config/: floor_plane.scene  gazebo_controller_custom.yaml  gazebo_ur10e_alpaka.urdf  kinematics.yaml  ompl_planning.yaml  ur10e_alpaka.srdf
ur10e_alpaka/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur5e_laser_sim/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_laser_sim/config/: fake_controllers.yaml  gazebo_controller_custom.yaml  gazebo_ur5e_laser_robot.urdf  kinematics.yaml  my_robot_calibration.yaml  noise_ur5e_laser_robot.urdf  ompl_planning.yaml  ros_controllers.yaml  servo.yaml  servo_simulated_config.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5e_laser_robot.srdf
ur5e_laser_sim/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  ur5e_bringup_custom.launch
